# Zgrwise

./: .gitignore  Makefile  README.md  analysis_report.html  docker-compose.yml  env.example  hotfix_setup.ps1  hotfix_setup.sh  updated_analysis_report.html
apps/api/: Dockerfile  Dockerfile.simple  __init__.py  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_fix_rss_models.py
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  models_rss.py  schemas.py  types.py
apps/api/app/logic/: __init__.py  ai.py  embeddings.py  search.py  search_enhanced.py  sr.py
apps/api/app/routes/: __init__.py  ai.py  ai_review.py  export.py  health.py  highlights.py  review.py  rss.py  rss_native.py  search.py  sources.py
apps/extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
apps/obsidian-plugin/: main.ts  manifest.json
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json
apps/web/.next/: app-build-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ai-review/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/rss/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: FeedItem.tsx  Sidebar.tsx  StatCard.tsx
apps/web/components/ui/: button.tsx  dropdown-menu.tsx
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: __init__.py  main.py  scheduler.py
apps/worker/worker/tasks/: __init__.py  embed.py  export.py  ingest.py  review.py  rss.py  rss_enhanced.py  rss_tasks.py
apps/worker/worker/utils/: __init__.py  ai.py  db.py  embeddings.py  models.py
tools/db/init/: 01_pgvector.sql  02_zgrwise_tables.sql  03_simple_tables.sql
(+36 files in other folders)
