[tool.poetry]
name = "zgrwise-worker"
version = "0.1.0"
description = "ZgrWise Worker Service for background tasks"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
rq = "^1.15.1"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.0"
readability-lxml = "^0.8.1"
pypdf = "^3.17.4"
# sentence-transformers = "^2.2.2"  # ML kütüphanesi - gereksiz
requests = "^2.31.0"
psycopg = {extras = ["binary"], version = "^3.1.13"}
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
schedule = "^1.2.0"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88 